feat: Replace internal README module documentation with DeepWiki link and add AGPL-3.0-only license to numrs-wasm.

--- a/bindings/numrs-wasm/Cargo.toml
+++ b/bindings/numrs-wasm/Cargo.toml
@@ -3,6 +3,7 @@ name = "numrs-wasm"
 version = "0.1.0"
 edition = "2021"
 authors = ["numrs contributors"]
+license = "AGPL-3.0-only"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
