--- a/bindings/numrs-js/Cargo.toml
+++ b/bindings/numrs-js/Cargo.toml
@@ -12,7 +12,8 @@ crate-type = ["cdylib"]
 napi = { version = "2", features = ["napi4"] }
 napi-derive = "2"
 # Usar BLAS/MKL sin WebGPU para evitar async overhead en Node.js
-numrs = { package = "numrs-core", version = "0.1.0", default-features = false, features = ["blas-backend"] }
+# numrs-core v0.1.1 fixes Rayon compilation issues
+numrs = { package = "numrs-core", path = "../../numrs-core", version = "0.1.1", default-features = false, features = ["blas-backend", "parallel"] }
 anyhow = "1.0"
 
 [features]
