--- a/bindings/numrs-js/package.json
+++ b/bindings/numrs-js/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "numrs-node",
+  "name": "@numrs/node",
   "version": "0.1.1",
   "description": "Node.js bindings for NumRs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "npm run build:native && npm run build:ts",
     "build:native": "cargo build --release && node ./scripts/postbuild.js",
