--- a/bindings/numrs-js/package.json
+++ b/bindings/numrs-js/package.json
@@ -2,8 +2,8 @@
   "name": "@numrs/node",
   "version": "0.1.3",
   "description": "Node.js bindings for NumRs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/ts/index.js",
+  "types": "dist/ts/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
