chore: bump version to v0.1.12 and fix linux path export

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,7 +116,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.16.5
         env:
           # Important: Tell cibuildwheel to build numrs-c first
-          CIBW_BEFORE_ALL_LINUX: "curl --version || yum install -y curl && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && $HOME/.cargo/bin/cargo build --release --manifest-path bindings/numrs-c/Cargo.toml"
+          CIBW_BEFORE_ALL_LINUX: "yum install -y curl || true && curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=$HOME/.cargo/bin:$PATH && cargo build --release --manifest-path bindings/numrs-c/Cargo.toml"
           CIBW_BEFORE_ALL_MACOS: "cd bindings/numrs-c && cargo build --release"
           CIBW_BEFORE_ALL_WINDOWS: "cd bindings/numrs-c && cargo build --release"
           
