--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,7 +107,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, windows-latest, macos-14]
 
     steps:
       - uses: actions/checkout@v4
@@ -117,7 +117,7 @@ jobs:
         env:
           # Important: Tell cibuildwheel to build numrs-c first
           CIBW_ARCHS: "auto64"
-          CIBW_BEFORE_ALL_LINUX: "yum install -y curl || true && curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=$HOME/.cargo/bin:$PATH && cargo build --release --manifest-path bindings/numrs-c/Cargo.toml"
+          CIBW_BEFORE_ALL_LINUX: "if [ -f /etc/alpine-release ]; then apk add --no-cache curl build-base; else yum install -y curl || true; fi && curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=$HOME/.cargo/bin:$PATH && cargo build --release --manifest-path bindings/numrs-c/Cargo.toml"
           CIBW_BEFORE_ALL_MACOS: "cd bindings/numrs-c && cargo build --release"
           CIBW_BEFORE_ALL_WINDOWS: "cd bindings/numrs-c && cargo build --release"
           
