--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,12 +117,11 @@ jobs:
         env:
           # Important: Tell cibuildwheel to build numrs-c first
           CIBW_ARCHS: "auto64"
-          CIBW_BEFORE_ALL_LINUX: "if [ -f /etc/alpine-release ]; then apk add --no-cache curl build-base; else yum install -y curl || true; fi && curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=$HOME/.cargo/bin:$PATH && cargo build --release --manifest-path bindings/numrs-c/Cargo.toml"
+          CIBW_BEFORE_ALL_LINUX: "if [ -f /etc/alpine-release ]; then apk add --no-cache curl build-base; else yum install -y curl || true; fi && curl https://sh.rustup.rs -sSf | sh -s -- -y && export PATH=$HOME/.cargo/bin:$PATH && cargo build --release --manifest-path bindings/numrs-c/Cargo.toml && cp bindings/numrs-c/target/release/libnumrs_c.so /usr/lib/"
           CIBW_BEFORE_ALL_MACOS: "cd bindings/numrs-c && cargo build --release"
           CIBW_BEFORE_ALL_WINDOWS: "cd bindings/numrs-c && cargo build --release"
           
           # Repair wheels: auditwheel (Linux) and delocate (Mac) automatically bundle the .so/.dylib
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/project/bindings/numrs-c/target/release && auditwheel repair -w {dest_dir} {wheel}"
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"
           
           # Point setup.py to the built library
